# musictools

./: .gitignore  LICENSE  README.md  example.config.json  pyproject.toml
music_manager/: condense.py  config.py  download.py  khi_scraper.py  value_objects.py
musictools/: __init__.py  condense.py  config.py  download.py  export.py  khi_scraper.py  value_objects.py
musictools/common/utils/: file_utils.py
musictools/common/value_objects/: music_file.py  playlist.py
tests/: test_config.py
tests/data/: config_incorrect_type.json  config_invalid_option.json  config_missing_field.json
