[tool.poetry]
name = "musictools"
version = "0.0.0"
description = ""
authors = ["TheNope"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
mutagen = "^1.47.0"
ffmpeg-python = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.6"

[tool.poetry.scripts]
condense = "musictools.condense:condense"
download = "musictools.download:download"
export = "musictools.export:export"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
